# kreuzberg

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .typos.toml  ATTRIBUTIONS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Package.swift  README.md  SECURITY.md  Taskfile.yml  alef.toml  artifacthub-repo.yml  biome.json  composer.json  deny.toml  migration_map.json  migration_map_v2.json  mkdocs.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  poly.toml  pyproject.toml  rust-toolchain.toml  server.json  zensical.toml
.ai-rulez/: .generated-manifest.json  config.toml
.cargo/: config.toml
.docker/: README.md
audit-notes/: benchmark-regressions-2026-06-04.md  candle-ocr-status.md  dart.md  kotlin-android.md  php.md
benchmarks/: pyproject.toml
cli-proxy/pypi/: README.md  pyproject.toml
cli-proxy/pypi/kreuzberg_cli/: cli.py  downloader.py
data-from-user/: kreuzberg.toml
docker/: Dockerfile.cli  Dockerfile.core  Dockerfile.full  Dockerfile.musl-build  Dockerfile.musl-ffi  Dockerfile.musl-node  Dockerfile.musl-rustler
docs/: demo.html  ecosystem.md  features.md  index.md  llms.txt
docs-site/: astro.config.mjs  package.json
scripts/: fix_test_document_names.py  install-system-pdfium-linux.sh  install-system-pdfium-macos.sh  install.sh  migrate_test_documents.py  readme_config.yaml  setup-swift-bridge.sh  update_dependencies.py
tests/: config_comprehensive_test.py  document_classification_comprehensive_test.py  document_classification_test.py  extraction_test.py  gmft_test.py  mime_types_test.py  pandoc_test.py  (+4 more)
(+2375 files in other folders)
