[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kreuzberg-cli"
version = "0.1.0"
description = "CLI proxy for kreuzberg — downloads and runs the native kreuzberg binary from GitHub releases."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Na'aman Hirschfeld", email = "naaman@kreuzberg.dev" }]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Environment :: Console",
]

[project.urls]
Homepage = "https://github.com/kreuzberg-dev/kreuzberg"
Repository = "https://github.com/kreuzberg-dev/kreuzberg.git"
Issues = "https://github.com/kreuzberg-dev/kreuzberg/issues"

[project.scripts]
kreuzberg = "kreuzberg_cli.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["kreuzberg_cli"]
